--- a/react-movie-master/src/pages/seat-selection.scss
+++ b/react-movie-master/src/pages/seat-selection.scss
@@ -6,6 +6,26 @@
   margin: 0 auto;
 }
 
+.booking-info-banner {
+  background: linear-gradient(135deg, rgba($main-color, 0.2), rgba($body-bg, 0.8));
+  padding: 1.5rem;
+  border-radius: 12px;
+  border: 2px solid $main-color;
+  margin-bottom: 2rem;
+  text-align: center;
+
+  h3 {
+    color: $main-color;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  p {
+    color: $txt-color;
+    font-size: 1rem;
+  }
+}
+
 .screen {
   text-align: center;
   margin-bottom: 3rem;
